# video_processing_utility

./: .gitignore  FFmpeg - Workaround  README.md  build.py  compile_flags.txt  cspinner.py  ffmpeg - Workaround  ffmpeg.py  main.py  main.spec  main_latest.py  meson.build  trim_test.py  ui.kv
FFmpeg/: FFmpeg - Workaround  main.py
include/: cstring.h  file_dialog.h  file_util.h  list.h  password_input.h  stb_to_sdl.h  vector.h  video.h
include/ui/: main_ui.h
src/: ffmpeg_wrap.c  list.c  main.c  resources.c  ui_assest.c
src/ui/: main_ui.c
src/utils/: file_dialog.c  file_util.c
